# telegram-chat-export-analytics

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: USER_ACTIVITY_DATA.md  WORKLOG.md
src/chat_analytics/: __init__.py  aggregation.py  cli.py  loader.py  models.py  participants.py  reactions.py  reporting.py  visualizations.py
tests/: test_aggregation.py  test_cli.py  test_loader.py  test_participants.py  test_reactions.py  test_visualizations.py
